通过SVG转Canvas来获取PNG

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-cssmin": "~0.9.0"
   },
   "scripts": {
-    "test": "grunt travis --verbose"
+    "test": "grunt travis --verbose",
+    "build": "grunt"
   }
 }
